postgres/cli-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-cli
  namespace: db
spec:
  selector:
    matchLabels:
      app: postgres-cli
  template:
    metadata:
      labels:
        app: postgres-cli
    spec:
      containers:
        - name: postgres-cli
          image: registry.andreybondarenko.com/postgres-cli:latest
          volumeMounts:
            - name: backup
              mountPath: /data
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: backup
          persistentVolumeClaim:
            claimName: backup
      imagePullSecrets:
        - name: my-private-registry
