postgres/postgres-exporter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-exporter
  namespace: db
spec:
  selector:
    matchLabels:
      app: postgres-exporter
  template:
    metadata:
      labels:
        app: postgres-exporter
    spec:
      containers:
        - name: postgres-exporter
          image: quay.io/prometheuscommunity/postgres-exporter:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 9187
              name: pmetrics
