postgres/stateful-set-postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: db
  labels:
    app: postgres
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/version: "17"
    app.kubernetes.io/managed-by: argoCD
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      priorityClassName: homelab-standard
      securityContext:
        fsGroup: 999
        runAsUser: 999
        runAsGroup: 999
      containers:
        - name: postgres
          image: harbor.andreybondarenko.com/github/cloudnative-pg/postgis:17
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: tcp-postgres
          readinessProbe:
            exec:
              command: ["pg_isready","-U","$(POSTGRES_USER)"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready","-U","$(POSTGRES_USER)"]
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          resources:
            requests:
              cpu: "50m"
              memory: "1Gi"
            limits:
              memory: "6Gi"
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: data
            #- name: backup
            #  mountPath: /backup
        - name: postgres-exporter
          image: harbor.andreybondarenko.com/quay/prometheuscommunity/postgres-exporter:v0.20.1
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
          ports:
            - containerPort: 9187
              name: pmetrics
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-postgres-postgresql-0
        #- name: backup
        #  persistentVolumeClaim:
        #    claimName: data-export
