postgres/postgres-exporter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter
  namespace: db
  labels:
    app: postgres-exporter
spec:
  ports:
    - port: 9187
  selector:
    app: postgres-exporter
