postgres/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-postgresql
  namespace: db
  labels:
    app: wordpress
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
