postgres/service-postgres-postgresql-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-postgresql-metrics
  namespace: db
  labels:
    app: postgres
spec:
  ports:
    - port: 9187
  selector:
    app: postgres
