postgres/service-postgres-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-postgresql
  namespace: db
  labels:
    app: postgres
    app.kubernetes.io/name: postgres
    app.kubernetes.io/instance: postgres
    app.kubernetes.io/version: "17"
    app.kubernetes.io/managed-by: argoCD
spec:
  ports:
    - port: 5432
  selector:
    app: postgres
